fixed spacing on the homepage, made it uniform, added text before cards

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -56,6 +56,24 @@
   margin-bottom: 30px;
 }
 
+.index-page-text {
+  color: gray;
+  font-size: 14px;
+  text-transform: uppercase;
+  text-align: center;
+  margin-top: 30px;
+  letter-spacing: 1.5px;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  flex: 1 0 70%;
+  margin-right: 30px;
+  margin-bottom: 30px;
+  margin-left: -19px;
+}
+
 .page-info-box {
   background-color: white;
   width: 100%;
@@ -98,10 +116,9 @@
   padding: 20px;
   border-radius: 5px;
   box-shadow: .5px .5px .5px rgba(1, 1, 1, 0.4);
-  position: absolute;
-  right: 0;
-  top: 0;
-  margin-top: 80px;
+  background-color: white;
+  min-width: 190px;
+  flex-wrap: nowrap;
 }
 .right-column p {
   padding-left: 20%;
@@ -129,19 +146,17 @@
   }
 
   .left-column {
-    list-style: none;
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    width: 80%;
-    //temp
-    height: 1000px;
-    padding-left: 0;
     justify-content: space-around;
-    vertical-align: middle;
-    height: 100%;
+    height: auto;
+    border-radius: 5px;
+    position: relative;
+    margin-bottom: 30px;
+    width: 100%;
+    list-style: none;
     overflow: auto;
-    margin-top: 80px;
+    flex-wrap: wrap;
+    padding-left: 0;
   }
 
   .left-column-element {
@@ -149,9 +164,8 @@
     display: inline-block;
     flex: flex-wrap;
     flex: 1 0 auto;
-    margin: 0 auto;
     margin-top: 0;
-    min-width: 300px;
+    min-width: 250px;
   }
 
   .banner-content h1 {
